--- a/.config/nvim/dein/dein.toml
+++ b/.config/nvim/dein/dein.toml
@@ -5,6 +5,11 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'Shougo/neocomplete'
+if = 'has("lua")'
+on_i = 1
+
+[[plugins]]
 repo = 'roxma/nvim-yarp'                 # neovim compatibility
 if = '!has("nvim")'
 
@@ -13,7 +18,7 @@ repo = 'roxma/vim-hug-neovim-rpc'        # neovim compatibility
 if = '!has("nvim")'
 
 [[plugins]]
-repo = 'Shougo/neosnippet'               # Snippet
+repo = 'Shougo/neosnippet.nvim'               # Snippet
 depends = ['deoplete.nvim']
 
 [[plugins]]
