--- a/.config/nvim/dein/dein.toml
+++ b/.config/nvim/dein/dein.toml
@@ -18,7 +18,7 @@ repo = 'roxma/vim-hug-neovim-rpc'        # neovim compatibility
 if = '!has("nvim")'
 
 [[plugins]]
-repo = 'Shougo/neosnippet.nvim'               # Snippet
+repo = 'Shougo/neosnippet.vim'               # Snippet
 depends = ['deoplete.nvim']
 
 [[plugins]]
