add plugin to preview markdown in vim

--- a/.config/nvim/dein/dein_lazy.toml
+++ b/.config/nvim/dein/dein_lazy.toml
@@ -35,3 +35,7 @@ on_ft = ['json']
 [[plugins]]
 repo = 'cespare/vim-toml'
 on_ft = ['toml']
+
+[[plugins]]
+repo = 'skanehira/preview-markdown.vim'  # preview markdown, Usage :PreviewMarkdown
+on_ft = ['md']                           # need to install mdr binary
