--- a/.config/autostart/mate-terminal.desktop
+++ b/.config/autostart/mate-terminal.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=/usr/bin/mate-terminal --geometry=104x60+960+0
+Exec=/usr/bin/mate-terminal --geometry=105x100+960+0
 X-MATE-Autostart-enabled=true
 Encoding=UTF-8
 Name[ja_JP]=mate-terminal
